[package]
edition = "2021"
name = "payroll-vault"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.2" }

[dev-dependencies]
odra-test = { version = "2.8.2" }

[build-dependencies]
odra-build = { version = "2.8.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2" }
odra-cli = { version = "2.8.2" }

[[bin]]
name = "payroll_vault_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "payroll_vault_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "payroll_vault_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 16
lto = false


[profile.dev]
debug = false
